# fle_2d

./: LICENSE  MANIFEST.in  README.md  fle_2d.py  pyproject.toml
jn_zeros/: my_jn_zeros.py
src/fle_2d/: __init__.py  fle_2d.py
src/fle_2d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_images/: ctf_L=32.mat  data_L=128.mat  data_L=360.mat  data_L=96.mat
tests/: test_fle_2d.py
tests/test_images/: ctf_L=128.mat  ctf_L=129.mat  ctf_L=16.mat  ctf_L=256.mat  ctf_L=512.mat  ctf_L=64.mat  data_L=160.mat  data_L=256.mat  data_L=32.mat  data_L=33.mat  data_L=512.mat  data_L=64.mat  data_L=65.mat
