[project]
name = "fle_2d"
version = "0.0.4"
authors = [
  { name="Nicholas F. Marshall"},
]
description = "Fast expansion into harmonics on the disk"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://arxiv.org/abs/2207.13674"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
